--- a/Hangman/Hangman/Hangman.csproj
+++ b/Hangman/Hangman/Hangman.csproj
@@ -32,7 +32,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReplaceWordLetters.cs" />
+    <Compile Include="ScrambleWord.cs" />
+    <Compile Include="RandomWord.cs" />
+    <Compile Include="Data.cs" />
+    <Compile Include="CheckPlayerInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
