--- a/Hangman/Hangman/Hangman.csproj
+++ b/Hangman/Hangman/Hangman.csproj
@@ -34,8 +34,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrambleWord.cs" />
     <Compile Include="RandomWord.cs" />
-    <Compile Include="Data.cs" />
     <Compile Include="CheckPlayerInput.cs" />
+    <Compile Include="GamePlay.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
