--- a/Hangman/Hangman/Hangman.csproj
+++ b/Hangman/Hangman/Hangman.csproj
@@ -34,7 +34,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrambleWord.cs" />
     <Compile Include="CheckPlayerInput.cs" />
-    <Compile Include="GameRound.cs" />
+    <Compile Include="GameCore.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="GameResult.cs" />
     <Compile Include="GameUl.cs" />
